--- a/WebConsulting/Pages/Main.razor
+++ b/WebConsulting/Pages/Main.razor
@@ -17,9 +17,10 @@
                 <a href="#" class="hover:text-orange-500">О компании</a>
                 <a href="/Services" class="hover:text-orange-500">Услуги</a>
                 <a href="/Contacts" class="hover:text-orange-500">Контакты</a>
+                <a href="/Registration" class="hover:text-orange-500">Регистрация</a>
             </nav>
             <div class="text-sm">
-                <p>+7 (499) 397-70-91</p>
+                <p>+7 (999) 999-99-99</p>
                 <p>info@Reputation.ru</p>
             </div>
         </div>
