--- a/WebConsulting/Pages/Services.razor
+++ b/WebConsulting/Pages/Services.razor
@@ -15,11 +15,12 @@
             <a href="" class="text-2xl font-bold text-orange-500">Reputation</a>
             <nav class="flex space-x-4">
                 <a href="" class="hover:text-orange-500">О компании</a>
-                <a href="" class="hover:text-orange-500">Услуги</a>
+                <a href="/Services" class="hover:text-orange-500">Услуги</a>
                 <a href="/Contacts" class="hover:text-orange-500">Контакты</a>
+                <a href="/Registration" class="hover:text-orange-500">Регистрация</a>
             </nav>
             <div class="text-sm">
-                <p>+7 (499) 397-70-91</p>
+                <p>+7 (999) 999-99-99</p>
                 <p>info@Reputation.ru</p>
             </div>
         </div>
@@ -110,7 +111,7 @@
     <footer class="bg-gray-800 text-white py-8 mt-16">
         <div class="container mx-auto text-center">
             <p>&copy; 2022-2024 Reputation Consulting</p>
-            <p>115201, Россия, Москва, Каширский проезд 25к2</p>
+            <p>115201, Россия, Москва</p>
         </div>
     </footer>
 
