--- a/WebConsulting/Pages/Main.razor
+++ b/WebConsulting/Pages/Main.razor
@@ -74,7 +74,7 @@
         <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
             <div>
                 <h2 class="text-2xl font-bold text-gray-800">Контакты</h2>
-                <p class="mt-4 text-gray-600">115201, Москва, Каширский проезд 25к2</p>
+                <p class="mt-4 text-gray-600">Россия</p>
                 <p class="mt-2 text-gray-600">info@Reputation.ru</p>
                 <button class="mt-4 bg-orange-500 text-white px-4 py-2 rounded">Связаться с нами</button>
             </div>
