--- a/WebConsulting/Pages/Services.razor
+++ b/WebConsulting/Pages/Services.razor
@@ -46,7 +46,7 @@
                         <h3 class="text-xl font-bold text-gray-800">Консалтинг</h3>
                         <p class="mt-2 text-gray-600">Набор консалтинговых услуг для бизнеса:</p>
                         <ul class="mt-4 text-orange-500 space-y-2">
-                            <li><a href="">Управление проектами</a></li>
+                            <li><a href="/Services/Management">Управление проектами</a></li>
                             <li><a href="">Организация менеджмента</a></li>
                             <li><a href="">Оптимизация процессов</a></li>
                             <li><a href="">Консалтинг по процессному управлению</a></li>
