Reviews.razor add reviews page

--- a/WebConsulting/Pages/Sevices/Management.razor
+++ b/WebConsulting/Pages/Sevices/Management.razor
@@ -56,6 +56,7 @@
                 <a href="#" class="hover:text-orange-500">О компании</a>
                 <a href="/Services" class="hover:text-orange-500">Услуги</a>
                 <a href="/Contacts" class="hover:text-orange-500">Контакты</a>
+                <a href="/Reviews" class="hover:text-orange-500">Отзывы</a>
                 <a href="/Registration" class="hover:text-orange-500">Регистрация</a>
             </nav>
             <div class="text-sm">
