--- a/WebConsulting/Pages/Reviews.razor
+++ b/WebConsulting/Pages/Reviews.razor
@@ -1,4 +1,4 @@
-﻿@page "/Registration"
+﻿@page "/Reviews"
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация | Reputation</title>
+    <title>Контакты | Reputation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         html,
@@ -45,25 +45,16 @@
     </header>
 
     <main class="container mx-auto py-8 px-4 lg:px-16 min-h-[calc(95%-64px)]">
-        <div class="bg-white p-8 shadow-lg rounded-lg max-w-md mx-auto">
-            <h1 class="text-2xl font-bold text-gray-800 mb-6">Авторизация</h1>
-            <form>
-                <div class="mb-4">
-                    <label for="email" class="block text-sm font-medium text-gray-600">E-mail:</label>
-                    <input type="email" id="email" name="email" placeholder="sample@domain.ru" class="mt-1 w-full px-4 py-2 border rounded-md focus:ring focus:ring-orange-200 focus:outline-none">
-                </div>
-                <div class="mb-4">
-                    <label for="password" class="block text-sm font-medium text-gray-600">Пароль:</label>
-                    <input type="password" id="password" name="password" placeholder="********" class="mt-1 w-full px-4 py-2 border rounded-md focus:ring focus:ring-orange-200 focus:outline-none">
-                    <a href="#" class="text-sm text-orange-500 hover:underline">Забыли пароль?</a>
-                </div>
-                <div class="flex items-center justify-between">
-                    <button type="submit" class="bg-orange-500 text-white px-6 py-2 rounded hover:bg-orange-600">Вход</button>
-                    <a href="#" class="bg-gray-100 text-gray-800 px-6 py-2 rounded border hover:bg-gray-200">Регистрация</a>
-                </div>
-            </form>
+        <div class="bg-white p-8 shadow-lg rounded-lg max-w-7xl mx-auto">
+            <h1 class="text-2xl font-bold text-gray-800 mb-6">Общие отзывы</h1>
+
+            <div>
+                <review-lab data-widgetid="6758377224021f12c4f5667c"></review-lab>
+                <script src="https://app.reviewlab.ru/widget/index-es2015.js" defer></script>
+            </div>
         </div>
     </main>
+
 
 
     <footer class="bg-gray-800 text-white py-4 mt-8">
