--- a/WebConsulting/Pages/Main.razor
+++ b/WebConsulting/Pages/Main.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject IJSRuntime JSRuntime
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,7 +19,19 @@
                 <a href="/Services" class="hover:text-orange-500">Услуги</a>
                 <a href="/Contacts" class="hover:text-orange-500">Контакты</a>
                 <a href="/Reviews" class="hover:text-orange-500">Отзывы</a>
-                <a href="/Registration" class="hover:text-orange-500">Регистрация</a>
+                @if (ShowRegistrationButton)
+                {
+                    <a href="/Registration" class="hover:text-orange-500">Регистрация</a>
+                }
+                @if (ShowAdminProfile)
+                {
+                    <a href="/pAdmin" class="hover:text-orange-500">Профиль</a>
+                }
+
+                @if (ShowUserProfile)
+                {
+                    <a href="/pUser" class="hover:text-orange-500">Профиль</a>
+                }
             </nav>
             <div class="text-sm">
                 <p>+7 (999) 999-99-99</p>
@@ -92,3 +105,37 @@
 </body>
 </html>
 
+@code {
+    private bool ShowRegistrationButton { get; set; } = true;
+    private bool ShowAdminProfile { get; set; } = false;
+    private bool ShowUserProfile { get; set; } = false;
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            var userRole = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "userRole");
+
+            if (!string.IsNullOrEmpty(userRole))
+            {
+                if (userRole == "Admin")
+                {
+                    ShowAdminProfile = true;
+                }
+                else if (userRole == "User")
+                {
+                    ShowUserProfile = true;
+                }
+                ShowRegistrationButton = false;
+            }
+            else
+            {
+                ShowRegistrationButton = true;
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Ошибка при извлечении данных с сессии: {ex.Message}");
+        }
+    }
+}
