--- a/WebConsulting/Pages/ProfileUser.razor
+++ b/WebConsulting/Pages/ProfileUser.razor
@@ -1,5 +1,6 @@
-﻿@page "/Reviews"
+﻿@page "/pUser"
 @inject IJSRuntime JSRuntime
+@inject NavigationManager NavigationManager
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты | Reputation</title>
+    <title>Регистрация | Reputation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         html,
@@ -58,16 +59,11 @@
     </header>
 
     <main class="container mx-auto py-8 px-4 lg:px-16 min-h-[calc(95%-64px)]">
-        <div class="bg-white p-8 shadow-lg rounded-lg max-w-7xl mx-auto">
-            <h1 class="text-2xl font-bold text-gray-800 mb-6">Общие отзывы</h1>
-
-            <div>
-                <review-lab data-widgetid="6758377224021f12c4f5667c"></review-lab>
-                <script src="https://app.reviewlab.ru/widget/index-es2015.js" defer></script>
-            </div>
+        <div class="bg-white p-8 shadow-lg rounded-lg max-w-md mx-auto">
+            <h1 class="text-2xl font-bold text-gray-800 mb-6">Юзер панель</h1>
+            <button @onclick="Logout" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Выйти</button>
         </div>
     </main>
-
 
 
     <footer class="bg-gray-800 text-white py-4 mt-8">
@@ -111,6 +107,22 @@
         catch (Exception ex)
         {
             Console.WriteLine($"Ошибка при извлечении данных с сессии: {ex.Message}");
+        }
+    }
+}
+
+@code {
+    private async Task Logout()
+    {
+        try
+        {
+            await JSRuntime.InvokeVoidAsync("sessionStorage.removeItem", "userRole");
+
+            NavigationManager.NavigateTo("/");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Ошибка при выходе из аккаунта: {ex.Message}");
         }
     }
 }
