--- a/WebConsulting/Pages/ProfileAdmin.razor
+++ b/WebConsulting/Pages/ProfileAdmin.razor
@@ -8,17 +8,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация | Reputation</title>
+    <title>Профиль администратора | Reputation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        html,
-        body {
+        html, body {
             height: 100%;
+            margin: 0;
         }
 
         body {
             display: flex;
             flex-direction: column;
+            min-height: 100vh;
         }
 
         main {
@@ -28,30 +29,27 @@
 </head>
 
 <body class="bg-gray-100 text-gray-800">
-
     <main class="container mx-auto py-8 px-4 lg:px-16 min-h-[calc(95%-64px)]">
         <div class="bg-white p-8 shadow-lg rounded-lg max-w-md mx-auto">
-            <h1 class="text-2xl font-bold text-gray-800 mb-6">Юзер панель</h1>
+            <h1 class="text-2xl font-bold text-gray-800 mb-6">Администратор панель</h1>
             <button @onclick="HandleLogout" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Выйти</button>
         </div>
     </main>
-
-
 </body>
 
 </html>
 
 @code {
-    private async Task HandleLogout() 
-    { 
-        try 
-        { 
-            await JSRuntime.InvokeVoidAsync("sessionStorage.removeItem", "userRole"); 
-            NavigationManager.NavigateTo("/"); 
-        }
-        catch (Exception ex) 
+    private async Task HandleLogout()
+    {
+        try
         {
-            Console.WriteLine($"Ошибка при выходе из аккаунта: {ex.Message}"); 
-        } 
+            await JSRuntime.InvokeVoidAsync("sessionStorage.removeItem", "userRole");
+            NavigationManager.NavigateTo("/");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Ошибка при выходе из аккаунта: {ex.Message}");
+        }
     }
 }
