Regis.razor add Registration page

--- a/WebConsulting/Layouts/Header.razor
+++ b/WebConsulting/Layouts/Header.razor
@@ -66,6 +66,7 @@
         <nav class="flex space-x-4">
             <a href="/" class="hover:text-orange-500">О компании</a>
             <a href="/services" class="hover:text-orange-500">Услуги</a>
+            <a href="/price" class="hover:text-orange-500">Цены</a>
             <a href="/contacts" class="hover:text-orange-500">Контакты</a>
             <a href="/reviews" class="hover:text-orange-500">Отзывы</a>
             @if (ShowRegistrationButton)
